crates/ndc-clickhouse/tests/snapshots/query_builder__chinook Inlined SQL@02_relationships_01_object_relationship.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: inlined_sql
input_file: crates/ndc-clickhouse/tests/query_builder/chinook/02_relationships_01_object_relationship.request.json
---
SELECT
  toJSONString(
    groupArray(
      cast(
        "_rowset"."_rowset",
        'Tuple(rows Array(Tuple("albumId" Int32, "artistId" Int32, "title" String, "Artist" Tuple(rows Array(Tuple("artistId" Int32, "name" Nullable(String)))))))'
      )
    )
  ) AS "rowsets"
FROM
  (
    SELECT
      tuple(
        groupArray(
          tuple(
            "_row"."_field_albumId" AS "albumId",
            "_row"."_field_artistId" AS "artistId",
            "_row"."_field_title" AS "title",
            "_row"."_field_Artist" AS "Artist"
          )
        ) AS "rows"
      ) AS "_rowset"
    FROM
      (
        SELECT
          "_origin"."AlbumId" AS "_field_albumId",
          "_origin"."ArtistId" AS "_field_artistId",
          "_origin"."Title" AS "_field_title",
          "_rel_0_Artist"."_rowset" AS "_field_Artist"
        FROM
          "Chinook"."Album" AS "_origin"
          LEFT JOIN (
            SELECT
              tuple(
                groupArray(
                  tuple(
                    "_row"."_field_artistId" AS "artistId",
                    "_row"."_field_name" AS "name"
                  )
                ) AS "rows"
              ) AS "_rowset",
              "_row"."_relkey_ArtistId" AS "_relkey_ArtistId"
            FROM
              (
                SELECT
                  "_origin"."ArtistId" AS "_field_artistId",
                  "_origin"."Name" AS "_field_name",
                  "_origin"."ArtistId" AS "_relkey_ArtistId"
                FROM
                  "Chinook"."Artist" AS "_origin"
              ) AS "_row"
            GROUP BY
              "_row"."_relkey_ArtistId"
          ) AS "_rel_0_Artist" ON "_origin"."ArtistId" = "_rel_0_Artist"."_relkey_ArtistId"
      ) AS "_row"
  ) AS "_rowset" FORMAT TabSeparatedRaw;
