crates/ndc-clickhouse/tests/snapshots/query_builder__complex_columns Inlined SQL@02_column_accessor_01_generate_column_accessor.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: inlined_sql
input_file: crates/ndc-clickhouse/tests/query_builder/complex_columns/02_column_accessor_01_generate_column_accessor.request.json
---
SELECT
  toJSONString(
    groupArray(
      cast(
        "_rowset"."_rowset",
        'Tuple(rows Array(Tuple("field1" Array(Tuple("subfield1" String)))))'
      )
    )
  ) AS "rowsets"
FROM
  (
    SELECT
      tuple(groupArray(tuple("_row"."_field_field1"))) AS "_rowset"
    FROM
      (
        SELECT
          arrayMap(
            (_value) -> tuple(_value."field1"),
            "_origin"."ColumnB"
          ) AS "_field_field1"
        FROM
          "Schema1"."Table1" AS "_origin"
      ) AS "_row"
  ) AS "_rowset" FORMAT TabSeparatedRaw;
